# keylogger-rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/config/: mod.rs
src/os/: mod.rs
src/os/linux/keyboard/: mod.rs
src/utils/: mod.rs
src/utils/errors/: mod.rs
src/utils/log_manager/: mod.rs
src/utils/writer/: mod.rs
